<resources>
    <string name="app_name">Project</string>
    <string name="top_rated">Top Rated</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="create_your_account">Create your account</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="back_button">Back</string>
    <string name="error_icon">Error Icon</string>
    <string name="best_overall">Best Overall</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="most_reviews">Most Reviews</string>
    <string name="my_saved_places">My Saved Places</string>
    <string name="search">Search</string>
    <string name="e_g_new_york_city">e.g. New York City</string>
    <string name="search_location_to_obtain_places">Search location to obtain places</string>
    <string name="no_name">No Name</string>
    <string name="no_address">No Address</string>
    <string name="image_of_place">Image of place</string>
    <string name="time">Time</string>
    <string name="saved_places">saved places</string>
    <string name="no_places_found">No Places Found</string>
    <string name="saved">saved</string>
    <string name="places_in">Places in</string>
    <string name="rating">Rating:      </string>
    <string name="reviews">Reviews:  </string>
    <string name="score">Score:        </string>
    <string name="login_success">Login success : </string>
</resources>