<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavedActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/staticText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/saved_places"
        app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
        app:layout_constraintStart_toEndOf="@+id/nameTextView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/radio_group_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/sortBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView">

        <RadioButton
            android:id="@+id/radioButtonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/name"
            android:textColor="@color/radio_button_text_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/time"
            android:textColor="@color/radio_button_text_color"
            android:textSize="16sp" />

    </RadioGroup>

    <ToggleButton
        android:id="@+id/sortBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginEnd="28dp"
        android:background="@null"
        android:button="@null"
        android:drawableStart="@drawable/arrow_up"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ProgressBar
        android:id="@+id/progressBarSaved"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/savedRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>